Recontruccion de funcionalidad mensajes;Optimizaciones para el vaciado; Optimizaciones en busquedas-orden de listados, filtros,paginado, contadores... Implementacion de nuevo registro, popup login, reporte a correos, de registro...

--- a/res/assets/css/index/top_menu.css
+++ b/res/assets/css/index/top_menu.css
@@ -11,7 +11,7 @@
 #texto_bienvenido{
 	font-size: 13px;
 	color: rgb(156, 156, 156);
-	/*margin-left: 13px;*/
+	margin-left:  20px !important;
 	margin-top: 12px;
 }
 .enlace_top{
