--- a/res/assets/css/pagina_producto.css
+++ b/res/assets/css/pagina_producto.css
@@ -1,5 +1,6 @@
 .pagina_producto{
-	border: 15px solid #f9f9f9;
+	border: 15px solid #f9f9f9;   
+	background-color: white;
 }
 .pagina_producto .contenedor_imagen{
 	padding-right: 0;
@@ -340,7 +341,8 @@
 	padding-top: 40px;
 	padding-left: 0;
 	padding-right: 0;
-	border: 15px solid #f9f9f9;
+	border: 15px solid #f9f9f9;   
+	background-color: white;
 }
 .contenedor_tabs_prod .pestanas{
 	padding-left: 60px;
