--- a/res/assets/css/perfil_empresa/contacto.css
+++ b/res/assets/css/perfil_empresa/contacto.css
@@ -141,3 +141,26 @@
 	margin-top: 47px;
 }
 /*------------------------------------------------*/
+
+
+/* Estilo de banner de adsense de perfil empres */
+.content_banner_verEmpres{
+    padding-top: 7px;
+	background-color: whitesmoke;
+	margin: 10px 0;
+	height: 116px;
+}
+.verEmpresa_adsense{
+	width: 728px;
+	height: 90px;
+	margin: 0 auto;
+	margin-bottom: 14px !important;
+	text-align: center; 
+}
+.title_banner_verEmprea{
+	margin-left: 23.1%;
+	font-size: 9px;
+	margin-bottom: 0;
+	margin-top: 3px;
+	padding-top: 3px;
+}
