--- a/res/assets/css/styles_login.css
+++ b/res/assets/css/styles_login.css
@@ -1,28 +1,28 @@
-.first-child
+.login .first-child
     {
       background-color: yellowgreen;
     }
-.second-child
+.login .second-child
   {
     background-color: #E6537D;
     color:black;
   }
-.third-child
+.login .third-child
   {
     background-color: crimson;
   }
-.fourth-child
+.login .fourth-child
   {
     background-color: lightseagreen;
     color:black;
   }
-.big-box
+.login .big-box
   {
     width: 50%;
     height: 50%;
     color:white;
   }
-.big-box h2
+.login .big-box h2
   {
     text-align: center;
     margin-top: 20%;
@@ -37,7 +37,7 @@
 
 @media screen and (max-width: 46.5em) 
   {
-    .big-box h2
+    .login .big-box h2
     {
       font-size:16px;
       padding-left:0px;
@@ -47,52 +47,53 @@
 
 @media screen and (max-width: 20.5em) 
   {
-    .big-box h2
+    .login .big-box h2
     {
       font-size:12px;
       padding-left:0px;
       margin-top:30%;
       }
   }
-.modal-dialog {
+.login .main-div{
     width: 100%;
     height: 100%;
     padding: 0;
     margin:0;
+    border-radius: 5px; 
+   border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
   }
-.modal-content {
-    
-    max-width: 325px;
-    margin: 70px auto;
-    border-radius: 0;
-    color: #5A5A5A;
-
-  }
-.modal-title
+.login .modal-title
   {
     font-size: 3em;
     font-weight: 300;
     margin: 0 0 20px 0;
   }
-.modal-content-one
+.login .modal-content-one
   {
     background-color:#e5e5e5;
   }
-.modal-content-two
+.login .modal-content-login
   {
     background-color:#FFFFFF;
     border-radius: 5px;
+    max-width: 323px!important;
+    margin: 70px auto;
+    border-radius: 0;
+    color: #5A5A5A;
+   border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
   }
-.modal-content-three
+.login .modal-content-three
   {
     background-color:#ededed;
   }
-.modal-content-four
+.login .modal-content-four
   {
     background-color:#ededed;
   }
   
-.close
+.login .close
   {
     /*color:white ! important;*/
     opacity:1.0;
@@ -100,41 +101,46 @@
 
 
   /* PopUp Login */
-.icono_cerrar
+.login .icono_cerrar
   {
     color: rgb(90, 90, 90);
   }
-
-.body_login
+.login .borders
+{ 
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+.login .body_login
   {
     margin: -20px auto 0px; 
     background: white; 
-    border-radius: 5px; 
     max-width: 90%;
   }
 
-.ig_name_user
+.login .ig_name_user
   {
     margin-bottom: 10px; 
     margin-top: 10px;
   }
 
-.ig_pwd
+.login .ig_pwd
   {
     margin: 0px auto 20px;
   }
 
-.ig_rememberme
+.login .ig_rememberme
   {
     margin: -15px auto 20px;
   }
   
-.input_txt
+.login .input_txt
   {
     height: 45px;
   }
 
-.btn_login
+.login .btn_login
   {
     height: 45px; width: 252px;
   }
@@ -142,42 +148,42 @@
 
   /* POPUP Mensaje confirmacion */
 
-.icon_conf
+.login .icon_conf
   {
     color: #58b957; 
     font-size: 125px;  
     margin: 0px 85px 0px; 
   }
 
-.btn_hecho
+.login .btn_hecho
   {
     font-size: 20px; 
     width: 197px; 
     margin: auto 50px;
   }
 
-.btn_reg {
+.login .btn_reg {
   font-size: 20px;
   width: 197px;
   margin: auto 50px;
   background-color: #FF7F27;
 }
 
-.icon_del
+.login .icon_del
   {
     color: #db524b; 
     font-size: 125px;  
     margin: 0px 85px 0px; 
   }
 
-.btn_conf
+.login .btn_conf
   {
     font-size: 20px; 
     width: 130px; 
     margin: auto 10px;
   }
 
-.btn_cancel
+.login .btn_cancel
   {
     font-size: 20px; 
     width: 130px; 
