--- a/res/assets/css/mensajes/mensajes.css
+++ b/res/assets/css/mensajes/mensajes.css
@@ -321,9 +321,9 @@
 	margin-bottom: 10px;
 }
 .leer_mensaje .img_miniatura_msj{
-	width: 50px;
-	height: 50px;
-	margin-top: 10px;
+	max-width: 50px;
+	max-height: 50px;
+	/*margin-top: 50px;*/
 	margin-left: 10px;
 	margin-right: 5px;
 }
