--- a/res/assets/css/banner_publicidad.css
+++ b/res/assets/css/banner_publicidad.css
@@ -2,8 +2,9 @@
    background-color: whitesmoke;
     padding-top: 10px;
     padding-left: 0px;
+    margin-left: 15px;
+    margin-bottom: 2px;
     padding-right: 15px;
-    margin: 0 0 0 0;
     height: 116px;
 }
 
