--- a/res/assets/css/banners_adcense.css
+++ b/res/assets/css/banners_adcense.css
@@ -2,8 +2,7 @@
 	background-color: whitesmoke;
     padding-top: 10px;
 	margin: 25px 0 0 0;
-	margin: 15px;
-	height: 116px;
+	max-height: 116px;
 }
 .publi_adsense{
 	max-width: 728px!important;
@@ -23,7 +22,7 @@
 .contenedor_listados_adsense{
 	background-color: whitesmoke;
 	margin: 10px 0;
-	height: 116px;
+	max-height: 116px;
 }
 .listados_adsense{
 	max-width: 728px!important;
@@ -46,7 +45,7 @@
     padding-top: 10px;
 	background-color: whitesmoke;
 	margin: 10px 0;
-	height: 116px;
+	max-height: 116px;
 }
 .productos_adsense{
 	max-width: 728px!important;
@@ -68,7 +67,7 @@
     padding-top: 10px;
 	background-color: whitesmoke;
 	margin: 10px 0;
-	height: 116px;
+	max-height: 116px;
 }
 .oportunidad_adsense{
 	max-width: 728px!important;
