--- a/res/assets/css/catalogo_producto/header_catalogo.css
+++ b/res/assets/css/catalogo_producto/header_catalogo.css
@@ -1,3 +1,23 @@
+
+.style-img-emp{
+   position: relative;
+   max-height: 
+   left: 63px;
+}
+.txt_nom_empre{
+   margin-bottom: 0;
+   font-size: 33px;
+   text-align: center;
+}
+/*
+y remplaza este fragmento por el que ya esta 
+.conten_img{
+width: 480px;
+   height: 190px;
+   margin: 18px auto;
+   text-align: center;
+}
+*/
 .conten_header_catalogo{
 	width: 100%;
 	height: 231px;
@@ -13,8 +33,8 @@
 
 .logo
 {
-	max-width: 25%;
-    max-height: 50%;
+	/*max-width: 25%;*/
+    max-height: 118px;
 }
 .nombre_membresia
 {
