--- a/res/assets/css/index_oroPlatino/index_oroPlatino.css
+++ b/res/assets/css/index_oroPlatino/index_oroPlatino.css
@@ -10,8 +10,10 @@
 }
 .banners
 {
-    max-width: 100%;
-    max-height: 100%;
+    height: 90%;
+    width: 100%;
+    /*max-width: 100%;
+    max-height: 90%;*/
 }
 .botones_contac{
     margin-top: 45px;
@@ -312,6 +314,9 @@ iframe
     top: 0px;
 }
 .img_galeria{
+    
+    max-width: 250px;
+    max-height: 250px;
     position: relative;
     top: 0px;
 }
