--- a/res/assets/css/config_OroPlatino/conf_cata_produc.css
+++ b/res/assets/css/config_OroPlatino/conf_cata_produc.css
@@ -196,6 +196,42 @@ a{
 .catalogo-public{
     margin-top: -18px;
 }
+
+.content_validacion{
+    margin-top: -6px;
+    margin-bottom: 8px;
+    padding-left: 80px !important;
+}
+
+.content_validacion2{
+    margin-top: -6px;
+    margin-bottom: 8px;
+    padding-left: 62px !important;
+}
+
+.content_validacion3{
+    margin-top: -6px;
+    margin-bottom: 8px;
+    padding-left: 0;
+}
+
+.content_validacion4{
+    margin-top: -6px;
+    margin-bottom: 8px;
+    padding-left: 21px !important;
+}
+
+.content_validacion5{
+    margin-top: -6px;
+    margin-bottom: 8px;
+    text-align: left;
+}
+
+/* Estilo de contenedor de icono de validación*/
+.conten-ico-vali{
+    padding: 0px 0px 0px 8px;
+}
+
 .conten-paso1, .conten-paso2{
     padding-left: 20px;
 }
@@ -213,7 +249,7 @@ a{
 }
 .conten-config{
 	width: 100%;
-	height: 929px;
+	height: auto;
     background-color: #fff;
     padding-left: 0;
     background-color: whitesmoke;
@@ -227,7 +263,7 @@ a{
 }
 .conten-config4{
     width: 100%;
-    height: 1170px;
+    height: auto;
     background-color: #fff;
     padding-left: 0;
     background-color: whitesmoke;
@@ -768,6 +804,12 @@ a{
     margin-left: 0;
 }
 
+.text_errors{
+    margin: 0 !important;
+    font-size: 15px !important;
+    color: red;
+}
+
 .txt_nomproducto, .txt_precio, .txt_pedido{
     font-size: 17px;
     margin-bottom: 3px;
@@ -928,6 +970,50 @@ a{
     height: 55px;
     border-bottom: 3px solid #ccc;
 }
+
+/* Estilos de iconos de valicacion*/
+.validacion_error{
+    font-size: 30px !important;
+    position: relative;
+    top: -1px;
+    color: red;
+}
+
+.validacion_success{
+    font-size: 30px !important;
+    position: relative;
+    top: 1px;
+    color: green;
+}
+
+.validacion_error_ta{
+    font-size: 30px !important;
+    position: relative;
+    top: -81px;
+    color: red;
+}
+
+.validacion_success_ta{
+    font-size: 30px !important;
+    position: relative;
+    top: -81px;
+    color: green;
+}
+
+.validacion_error_ta2{
+    font-size: 30px !important;
+    position: relative;
+    top: -41px;
+    color: red;
+}
+
+.validacion_success_ta2{
+    font-size: 30px !important;
+    position: relative;
+    top: -41px;
+    color: green;
+}
+
 .ver-ejm{
     display: inline-block;
     color: #FF7F27;
