--- a/res/assets/css/index_oroPlatino/index_oroPlatino.css
+++ b/res/assets/css/index_oroPlatino/index_oroPlatino.css
@@ -84,7 +84,7 @@
 .container_imagen{
     width: 100%;
     height: 283px;
-    background-color: #fff;
+    background-color: whitesmoke;
 }
 .container_nues_empresa{
     width: 100%;
