--- a/res/assets/css/catalogo_producto/header_catalogo.css
+++ b/res/assets/css/catalogo_producto/header_catalogo.css
@@ -5,9 +5,11 @@
    left: 63px;
 }
 .txt_nom_empre{
-   margin-bottom: 0;
-   font-size: 33px;
-   text-align: center;
+	margin-top: 19px;
+   	margin-bottom: 0;
+   	font-size: 37px;
+   	text-align: center;
+   	line-height: 1;
 }
 /*
 y remplaza este fragmento por el que ya esta 
@@ -63,11 +65,11 @@ width: 480px;
 	text-decoration: none !important;
 }
 .list_item{
-	list-style: none;
+    list-style: none;
     margin-top: 5px;
     padding-left: 25px;
     padding-right: 19px;
-    line-height: 41px;
+    line-height: 32px;
     margin-bottom: 0;
 }
 .list_redes{
@@ -92,6 +94,10 @@ width: 480px;
 	color: #ff7f27;
 	border-bottom: 5px solid #ff7f27;
 }
+.anti-active{
+	color: transparent;
+	border-bottom: 0 !important;
+}
 .icon_style{
 	font-size: 18px !important;
 	padding-right: 7px;
@@ -105,15 +111,17 @@ width: 480px;
 	color: #999999;
 }
 .conten_img{
-	width: 480px;
+    width: 50%;
     height: 190px;
-    margin: 18px auto;
+    margin: 30px 10px 20px 378px;
 }
 .info .tipo_empresa .style_empresa{
 	width: 56px;
-    display: inline-block;
-    margin-right: 0px;
-    margin-left: 0px;
+	display: inline-block;
+    margin-right: 10px;
+    margin-left: 8px;
+    margin-top: 1px;
+    margin-bottom: 2px;
 }
 .info .verificacion .style_verificacion{
     width: 35px;
@@ -125,6 +133,10 @@ width: 480px;
 }
 .info .tipo_empresa .inline-block{display: inline-block;}
 .info .verificacion .inline-block{display: inline-block;}
+
+.sonri-img{
+    margin-top: 3px;
+}
 
 .tipo_empresa {
 	position: relative;
