--- a/res/assets/css/catalogo_producto/produc_prin_catalogo.css
+++ b/res/assets/css/catalogo_producto/produc_prin_catalogo.css
@@ -32,6 +32,11 @@ a
 	background-color: #ff8100;
 	color: #fff;
 }
+.logo
+{
+    width: 25%;
+    height: 50%;
+}
 /**/
 .text-coti{
 	font-size: 16px !important;
