--- a/res/assets/css/cotizaciones_requeridas/cotizaciones_requeridas.css
+++ b/res/assets/css/cotizaciones_requeridas/cotizaciones_requeridas.css
@@ -10,6 +10,11 @@
 .padding-left{
 	padding-left: 0;
 }
+.logo
+{
+    width: 25%;
+    height: 50%;
+}
 .conten_categorias{
 	width: auto;
     height: auto;
