--- a/res/assets/css/nosotros/nosotros.css
+++ b/res/assets/css/nosotros/nosotros.css
@@ -5,6 +5,11 @@
     border-bottom: 5px solid #ccc;
     padding-left: 92px;
 }
+.logo
+{
+    width: 25%;
+    height: 50%;
+}
 .membresias_proveedor{
     width: 100%;
     height: 84px;
