Puntos Suspensivos agregado

--- a/res/assets/css/catalogo_producto/header_catalogo.css
+++ b/res/assets/css/catalogo_producto/header_catalogo.css
@@ -9,7 +9,7 @@
    	margin-bottom: 0;
    	font-size: 37px;
    	text-align: center;
-   	line-height: 1;
+   	line-height: .9;
 }
 /*
 y remplaza este fragmento por el que ya esta 
