--- a/res/assets/css/index_oroPlatino/index_oroPlatino.css
+++ b/res/assets/css/index_oroPlatino/index_oroPlatino.css
@@ -36,7 +36,8 @@
     font-size: 16px;
     color: #111;
     margin-bottom: 0;
-
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 .texto-2{
     margin-bottom: 0;
