--- a/res/assets/css/config_OroPlatino/conf_cata_produc.css
+++ b/res/assets/css/config_OroPlatino/conf_cata_produc.css
@@ -261,13 +261,15 @@ a{
     background-color: #fff;
     padding-left: 0;
     background-color: whitesmoke;
+    padding-bottom: 130px;
 }
 .conten-config2{
     width: 100%;
-    height: 1150px;
+    height: auto;
     background-color: #fff;
     padding-left: 0;
     background-color: whitesmoke;
+    padding-bottom: 130px;
 }
 .conten-config4{
     width: 100%;
@@ -275,17 +277,19 @@ a{
     background-color: #fff;
     padding-left: 0;
     background-color: whitesmoke;
+    padding-bottom: 130px;
 }
 .conten-config5{
     width: 100%;
-    height: 700px;
+    height: auto;
     background-color: #fff;
     padding-left: 0;
     background-color: whitesmoke;
+    padding-bottom: 130px;
 }
 .conten-config6{
     width: 100%;
-    height: 1550px;
+    height: auto;
     background-color: #fff;
     padding-left: 0;
     background-color: whitesmoke;
@@ -297,10 +301,11 @@ a{
 }
 .conten-config3{
     width: 100%;
-    height: 1430px;
+    height: auto;
     background-color: #fff;
     padding-left: 0;
     background-color: whitesmoke;
+    padding-bottom: 130px;
 }
 .conten-config8{
     width: 100%;
@@ -593,7 +598,7 @@ a{
     color: #FF7F27;
 }
 .inline-block{
-	display: inline-block;
+	display: inline-block !important;
 }
 .item-cata{
 	list-style: none;
@@ -715,7 +720,7 @@ a{
     position: absolute;
     left: 494px;
     top: 99px;
-    width: 140px;
+    width: 145px;
 }
 .que-quiero{
     font-size: 17px;
