--- a/res/assets/css/config_OroPlatino/top_menu_config.css
+++ b/res/assets/css/config_OroPlatino/top_menu_config.css
@@ -7,7 +7,7 @@
 	color: #FF7F27;
 }
 .icostyle-config{
-    padding: 12px !important;
+    padding: 6px 10px 17px 9px !important;
     font-size: 26px;
     color: #FF7F27;
 }
@@ -22,6 +22,9 @@
 .item-list{
     background-color: transparent !important;
     color: #7f7f7f;	
+    font-weight: bold;
+    font-size: 13px;
+    padding: 12px 12px !important;
 }
 .item-list:hover{
 	color: #7f7f7f;
@@ -36,19 +39,19 @@
 .nom_username{
     font-weight: bold;
     color: #FF7F27;
-    font-size: 17px;
-    padding: 15px 0 0 0 !important;
+    font-size: 16px;
+    padding: 9px 0 0 0 !important;
 }
 .nom_username:hover{
 	background-color: transparent !important;
 	color: #FF7F27;
 }
 .padding-style{
-	padding-left: 100px;
+    padding-left: 80px;
 }
 .top_menu_conf{
 	width: 100%;
-	height: 63px;
+	height: 62px;
 	border-bottom: 4px solid #00a2e8;
 }
 .salir{
@@ -56,7 +59,7 @@
 	color: #7f7f7f;
 	border-left: 1px solid #ccc;
     padding: 0px 0px 0px 15px !important;
-    margin-top: 15px;
+    margin-top: 9px;
 }
 .salir:hover{
 	background-color: transparent !important;
@@ -65,9 +68,13 @@
 
 @media (max-width: 1280px) {
 	.padding-style{
-		padding-left: 5px;
+		padding-left: 15px;
 	}
 	.palabras-maxima{
 	    left: 443px !important;
+	}
+	.list-menu{
+    	padding: 9px 8px 5px 8px;
+    	font-size: 14px;
 	}
 }
