--- a/res/assets/css/index_oroPlatino/index_oroPlatino.css
+++ b/res/assets/css/index_oroPlatino/index_oroPlatino.css
@@ -1,6 +1,131 @@
 .boton_descargar{
     margin-left: 38px;
 }
+
+.content_item_produc{
+    padding-left: 25px;
+    margin-bottom: 40px;
+}
+.img_producto
+{
+  max-height: 155px;
+  max-width: 100%;
+}
+.imagen_producto{
+    width: 100%;
+    height: 155px;    
+    margin-top: 15px;
+    text-align: center;
+}
+.contexto_producto{
+    width: 100%;
+    height: 85px;
+    position: relative;
+    top: 18px;
+}
+.info_producto
+{
+  margin-bottom: 2px;
+  font-size: 16px;
+  height: 35px;
+  width: 100%;
+  line-height: 1;
+  overflow:hidden;
+  text-overflow: ellipsis;
+}
+.contexto_producto > .textos > .nombre_producto{    
+    margin-bottom: 2px;
+    font-size: 16px;
+    line-height: 1;
+    color: black !important;
+    overflow:hidden;
+    text-overflow: ellipsis;
+} 
+.contexto_producto > .textos > .texto_precio{
+    margin-bottom: -5px;
+    font-size: 17px;
+    color: orange;
+}
+.contexto_producto > .textos > .unidades{
+  margin-bottom: -5px;
+  font-size: 15px;
+  color: #8d8c8c;
+}
+.contexto_producto > .textos > .pedido {
+    margin-bottom: 0;
+    font-size: 10px;
+    font-weight: bold;
+    color: #8d8c8c;
+}
+
+
+.checkbox {
+    position: relative;
+    /*top: 20px;*/
+    margin: 10px 0px !important;
+    cursor: pointer;
+    left: -7px;
+    float: right;
+}
+ 
+.checkbox:before {
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  content: "";
+  position: absolute;
+  left: 0;
+  z-index: 1;
+  width: 20px;
+  height: 20px;
+  border: 1px solid #ccc;
+}
+ 
+.checkbox:checked:before {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  height: 9px;
+  border-color: #009688;
+  border-top-style: none;
+  border-right-style: none;
+  border-width: 2px;
+}
+ 
+.checkbox:after {
+  content: "";
+  position: absolute;
+  top: -0.125rem;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  background: #fff;
+  cursor: pointer;
+}
+
+.contenedor_productos_item {
+    padding-top: 30px;
+    padding-left: 30px;
+}
+.contenedor_productos_item > .item_procud{
+    display: inline-block;
+    padding-top: 30px;
+}
+.item_procud{
+  position: relative;
+  top: 0;
+  width: 235px;
+  height: 330px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  margin-right: 22px;
+  margin-bottom: 22px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 .btn_soli, .btn_soli:hover{
     width: 637px;
     height: 59px;
@@ -8,12 +133,9 @@
     color: #fff;
     border-radius: 3px;
 }
-.banners
+.banner
 {
-    height: 90%;
-    width: 100%;
-    /*max-width: 100%;
-    max-height: 90%;*/
+    max-height: 284px;
 }
 .botones_contac{
     margin-top: 45px;
@@ -25,8 +147,8 @@
     max-width: 180px;
 }
 .char-img{
-    width: auto;
-    height: 183px;
+    max-height: 155px;
+    max-width: 100%;
     margin: 0 auto;
 }
 .textos-img{
@@ -151,8 +273,8 @@
 }
 .logo
 {
-    width: 340px;
-    max-height: 110px;
+    max-width: 241px;
+    max-height: 144px;
 }
 iframe
 {
@@ -187,7 +309,7 @@ iframe
     padding: 0;
     display: inline-block;
     margin-top: 10px;
-    padding-left: 10px;
+    padding-left: 0px;
     padding-right: 10px;
 }
 .item_video{
@@ -530,7 +652,7 @@ iframe
     margin-right: 0;
     margin-left: 0;
 }
-
+/*
 @media (max-width: 1280px) {
     .item-proPrin{
         width: 195px;
@@ -571,4 +693,4 @@ iframe
         margin-right: 0px;
         margin-bottom: 0;
     }
-}
+}*/
