--- a/res/assets/css/catalogo_producto/header_catalogo.css
+++ b/res/assets/css/catalogo_producto/header_catalogo.css
@@ -5,7 +5,6 @@
    left: 63px;
 }
 .txt_nom_empre{
-	margin-top: 15px;
    	margin-bottom: 0;
    	font-size: 37px;
    	text-align: center;
@@ -32,11 +31,14 @@ width: 480px;
     text-align: center;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
-
+.div-nom-empresa{    
+    margin: 10px 0 5px 0;    
+}
 .logo
-{
-	/*max-width: 25%;*/
-    max-height: 118px;
+{   
+    max-width: 420px;
+    max-height: 144px;
+    margin: 0 auto;
 }
 .nombre_membresia
 {
@@ -66,7 +68,7 @@ width: 480px;
 }
 .list_item{
     list-style: none;
-    margin-top: 9px;
+    margin-top: 10px;
     padding-left: 25px;
     padding-right: 19px;
     line-height: 32px;
@@ -136,6 +138,7 @@ width: 480px;
 
 .sonri-img{
     margin-top: 6px;
+    margin: 0 auto;
 }
 
 .tipo_empresa {
