--- a/res/assets/css/index_oroPlatino/index_oroPlatino.css
+++ b/res/assets/css/index_oroPlatino/index_oroPlatino.css
@@ -113,6 +113,24 @@
     display: inline-block;
     padding-top: 30px;
 }
+.div-img{
+    /*
+    position: relative;
+    left: 50%;
+    top: 30%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    padding-top: 10px;*/
+    
+    width: 420px;
+    height: 144px;
+    margin: 0 auto;
+}
+.div-sonrisa{
+    margin: 0 auto;
+    width: 100%;
+    height: 25px;
+}
 .item_procud{
   position: relative;
   top: 0;
@@ -270,11 +288,6 @@
     background-color: whitesmoke;   
     padding: 20px 20px; 
 
-}
-.logo
-{
-    max-width: 241px;
-    max-height: 144px;
 }
 iframe
 {
@@ -454,6 +467,16 @@ iframe
     background-color: #fff;
     border-bottom: 5px solid #ccc;
 }
+.mini-logo{
+    width: 20px !important;
+    height: 34px;
+    float: right;
+}
+.mini-logo2{
+    max-width: 20px !important;
+    max-height: 34px;
+    float: right;
+}
 .llamar_empresa{
     background-color: #ff7f27;
     color: #fff;
@@ -465,15 +488,15 @@ iframe
     list-style: none;
     padding-left: 0;
     padding-top: 7px;
-    margin-left: 16px;
-    margin-right: 30px;
+    margin-left: 0px;
+    margin-right: 77px;
     margin-bottom: 0;
 }
 .list-title-galeria{
     list-style: none;
     padding-left: 0;
     padding-top: 19px;
-    margin-left: 16px;
+    margin-left: 8px;
     margin-right: 30px;
     margin-bottom: 0;
 }
@@ -482,15 +505,23 @@ iframe
     padding-left: 0;
     padding-top: 29px;
     margin-left: 16px;
-    margin-right: 30px;
+    margin-right: 0;
     margin-bottom: 0;
 }
 .list_pro{
     list-style: none;
     padding-left: 0;
     padding-top: 20px;
-    margin-left: 16px;
-    margin-right: 30px;
+    margin-left: 11px;
+    margin-right: 40px;
+    margin-bottom: 0;
+}
+.list-title-nuestra{
+    list-style: none;
+    padding-left: 0;
+    padding-top: 7px;
+    margin-left: -10px;
+    margin-right: 48px;
     margin-bottom: 0;
 }
 .list_redes{
@@ -652,7 +683,7 @@ iframe
     margin-right: 0;
     margin-left: 0;
 }
-/*
+
 @media (max-width: 1280px) {
     .item-proPrin{
         width: 195px;
@@ -664,8 +695,24 @@ iframe
         list-style: none;
         padding-left: 0;
         padding-top: 20px;
-        margin-left: 16px;
-        margin-right: 24px;
+        margin-left: 11px;
+        margin-right: 30px;
+        margin-bottom: 0;
+    }
+    .list-title{
+        list-style: none;
+        padding-left: 0;
+        padding-top: 7px;
+        margin-left: 0px;
+        margin-right: 50px;
+        margin-bottom: 0;
+    }
+    .list-title-nuestra{
+        list-style: none;
+        padding-left: 0;
+        padding-top: 7px;
+        margin-left: -10px;
+        margin-right: 49px;
         margin-bottom: 0;
     }
     .item-video{
@@ -685,12 +732,4 @@ iframe
         top: 165px;
         left: 27px;
     }
-    .list-title-videos{
-        list-style: none;
-        padding-left: 0;
-        padding-top: 29px;
-        margin-left: 16px;
-        margin-right: 0px;
-        margin-bottom: 0;
-    }
-}*/
+}
