--- a/res/assets/css/catalogo_producto/produc_prin_catalogo.css
+++ b/res/assets/css/catalogo_producto/produc_prin_catalogo.css
@@ -3,6 +3,17 @@ a
 {
   color: black;
 }
+.pad-cincuenta{
+  padding-bottom: 50px;
+}
+.btn-descargar{
+  width: 90%;
+}
+.icon_style_des3{
+    font-size: 19px;
+    position: relative;
+    top: 3px;
+}
 .img-pdf2{
   max-width: 100%;
   max-height: 155px;
@@ -99,6 +110,13 @@ a
     color: #fff;
     text-decoration: none;
 }
+.enlace_soli2, .enlace_soli2:hover{
+  position: relative;
+    top: -4px;
+    left: 6px;
+    color: #fff;
+    text-decoration: none;
+}
 .padding-left{
 	padding-left: 0;
 }
@@ -182,6 +200,9 @@ a
     height: 85px;
     position: relative;
     top: 18px;
+}
+.center{
+  text-align: center;
 }
 .info_producto
 {
@@ -281,7 +302,7 @@ a
 
 .textos2{
     font-weight: bold;
-    font-size: 17px !important;
+    font-size: 18px !important;
 }
 
 @media (max-width: 1280px) {
