--- a/res/assets/css/index_oroPlatino/index_oroPlatino.css
+++ b/res/assets/css/index_oroPlatino/index_oroPlatino.css
@@ -367,6 +367,13 @@ iframe
     color: #ff7f27;
     top: 183px;
 }
+.ico_flecha_right_video2{
+    display: inline-block;
+    float: right;
+    font-size: 21px;
+    color: #ff7f27;
+    top: 128px;
+}
 .texto_tag{
     width: 100%;
     height: 74px;
@@ -628,10 +635,13 @@ iframe
     font-size: 15px;
 }
 .titulo_galeria{
-    position: relative;
-    top: -3px;
     text-align: center;
     font-size: 15px;
+    line-height: 1;
+    width: 100%;
+    height: 35px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .style-info{
     display: inline-block;
