Termnados efectos de animacion de las galerias

--- a/res/assets/css/index_oroPlatino/index_oroPlatino.css
+++ b/res/assets/css/index_oroPlatino/index_oroPlatino.css
@@ -115,9 +115,27 @@
     width: 70%;
    */
 }
-.contenedor_productos_item > .item_procud{
+.contenedor_productos_item > .item_procud
+{
+    overflow: hidden;
     display: inline-block;
     padding-top: 30px;
+    opacity: 1;    
+    transition:  width 5s,opacity 2s,margin-left 2s,padding-left 2s ease-in-out;
+  }
+
+.contenedor_productos_item > .item_procud_hidden{
+    overflow: hidden;
+    display: inline-block;
+    padding-top: 30px;
+    height: auto;
+    padding-left: -150px;
+    margin-left: -150px;
+    /*
+    width: 0;
+    */
+    opacity: 0;
+    transition:  width 5s,opacity 2s,margin-left 2s,padding-left 2s linear;
 }
 .div-img{
     width: 420px;
