reparciones del header; menus, logo, enlaces de compartir, comentados

--- a/res/assets/css/catalogo_producto/header_catalogo.css
+++ b/res/assets/css/catalogo_producto/header_catalogo.css
@@ -6,9 +6,16 @@
 }
 .txt_nom_empre{
    	margin-bottom: 0;
-   	font-size: 37px;
+   	font-size: 42px;
    	text-align: center;
    	line-height: .8;
+}
+
+.img_logo
+{
+position: relative;
+top: 50%;
+transform: translateY(-50%)
 }
 /*
 y remplaza este fragmento por el que ya esta 
@@ -46,19 +53,19 @@ width: 480px;
 }
 .enlaces_header{
 	color: #111;
-	font-size: 16px;
+	font-size: 17px;
 	text-decoration: none !important;
 }
 
 .enlaces_header2{
 	color: #ff7f27;
-	font-size: 15px;
+	font-size: 17px;
 	text-decoration: none !important;
 	font-weight: bold;
 }
 .enlaces_header2:hover{
 	color: #ff7f27;
-	font-size: 15px;
+	font-size: 17px;
 	text-decoration: none !important;
 	font-weight: bold;
 }
@@ -69,14 +76,14 @@ width: 480px;
 
 .enlaces_header:hover{
 	color: #111;
-	font-size: 16px;
+	font-size: 17px;
 	text-decoration: none !important;
 }
 .list_item{
     list-style: none;
     margin-top: 10px;
-    padding-left: 25px;
-    padding-right: 19px;
+    padding-left: 32px;
+    /*padding-right: 19px;*/
     line-height: 32px;
     margin-bottom: 0;
     padding-bottom: 7px;
@@ -85,7 +92,7 @@ width: 480px;
 	list-style: none;
     margin-top: 10px;
     padding-left: 25px;
-    padding-right: 19px;
+   /* padding-right: 19px;*/
     line-height: 32px;
     margin-bottom: 0;
     padding-bottom: 7px;
@@ -244,8 +251,8 @@ width: 480px;
 	.list_item{
 		list-style: none;
 	    margin-top: 5px;
-	    padding-left: 21px;
-	    padding-right: 19px;
+	    padding-left: 32px;
+	    /*padding-right: 19px;*/
 	    line-height: 41px;
 	    margin-bottom: 0;
 	}
@@ -253,7 +260,7 @@ width: 480px;
 	    list-style: none;
 	    margin-top: 10px;
 	    padding-left: 25px;
-	    padding-right: 19px;
+	    /*padding-right: 19px;*/
 	    line-height: 32px;
 	    margin-bottom: 0;
 	    padding-bottom: 12px;
