--- a/res/assets/css/config_OroPlatino/conf_cata_produc.css
+++ b/res/assets/css/config_OroPlatino/conf_cata_produc.css
@@ -16,6 +16,10 @@
     color: #fff;
     text-decoration: none;
 }
+.select_button:hover{
+    color: #fff;
+    text-decoration: none;
+}
 a{
     color: #000;
     text-decoration: none;
@@ -483,7 +487,7 @@ a{
     border-top: 1px solid #ccc;
 }
 .imagen-prin{
-    padding-right: 40px;
+    padding-right: 20px;
 }
 .ico-ip-down{
     font-size: 17px;
@@ -793,6 +797,7 @@ a{
     font-size: 10px !important;
     color: #FF7F27;
     cursor: pointer;
+    padding: 0 5px;
 }
 .sub-aba{
     font-size: 16px !important;
@@ -829,7 +834,16 @@ a{
     font-size: 15px !important;
     color: red;
 }
-
+.txt_nomproducto2{
+    font-size: 17px;
+    margin-bottom: 3px;
+    color: #111;
+    line-height: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 370px;
+    height: 35px;
+}
 .txt_nomproducto, .txt_precio, .txt_pedido{
     font-size: 17px;
     margin-bottom: 3px;
