--- a/res/assets/css/config_OroPlatino/conf_cata_produc.css
+++ b/res/assets/css/config_OroPlatino/conf_cata_produc.css
@@ -248,7 +248,7 @@ a{
     padding-left: 20px;
 }
 .conten-item-catapu{
-    padding: 25px 50px 0 23px;
+    padding: 25px 23px 0 23px;
 }
 .conten-item-catapu2{
     padding: 15px 50px 0 40px;
@@ -509,7 +509,6 @@ a{
 }
 .img-pdf-up{
     display: inline-block;
-    height: 0;
 }
 .ico-rem{
     margin-right: 5px;
@@ -629,8 +628,8 @@ a{
     height: 116px;
     position: relative;
     display: inline-block;
-    top: -93px;
-    margin-top: 30px;
+    top: -48px;
+    
 }
 .list-item-cata{
 	font-size: 16px;
@@ -891,7 +890,7 @@ a{
 }
 .text-cata-publi{
     font-size: 20px;
-    margin-left: 28px;
+    margin: 0 28px 0 28px;
     border-bottom: 1px solid #ccc;
     line-height: 3;
 }
