--- a/res/assets/css/catalogo_producto/header_catalogo.css
+++ b/res/assets/css/catalogo_producto/header_catalogo.css
@@ -34,7 +34,7 @@ width: 480px;
 	width: 100%;
 	height: 59px;
     border-top: 1px solid #e5e5e5;
-    border-bottom: 5px solid #0694da;
+    border-bottom: 5px solid #31708f;
     text-align: center;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
