--- a/res/assets/css/index_oroPlatino/index_oroPlatino.css
+++ b/res/assets/css/index_oroPlatino/index_oroPlatino.css
@@ -113,33 +113,49 @@
     height: 380px; 
     padding-top: 30px;
     padding-left: 0;
+    padding-right: -235;
     text-align: center;
 }
-.contenedor_productos_item > .item_procud
-{
-    overflow: hidden;
-    display: inline-block;
-    padding-top: 30px;
-    opacity: 1;    
-    transition:  width 5s,opacity 2s,margin-left 2s,padding-left 2s ease-in-out;
-    text-align: left;
-  }
-
-.contenedor_productos_item > .item_procud_hidden{
-    overflow: hidden;
-    display: inline-block;
-    padding-top: 30px;
-    /*
-    padding-left: -250px;
-    margin-left: -250px;
-    width: 0;
-    transform: translateY(-50%)
-    */
+.item_procud_hidden{
     position: relative;
-    left: -100%;
+    top: 0;
+    width: 235px;
+    height: 330px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    margin-top: 0px;
+    margin-bottom: 22px;
+    margin-right: 10px;
+    margin-left: -250px;
+    padding-left: 15px;
+    padding-right: 15px;
 
-    opacity: 0;
-    transition:  left 5s,width 5s,opacity 2s,margin-left 2s,padding-left 2s linear;
+    overflow: hidden;
+    display: inline-block;
+    padding-top: 30px;
+    text-align: left;
+
+    transition:  margin-left 0.5s ease-in-out;
+}
+.item_procud{
+    position: relative;
+    top: 0;
+    width: 235px;
+    height: 330px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    margin-top: 0px;
+    margin-left: 10px ;
+    margin-bottom: 22px;
+    margin-right: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+
+    overflow: hidden;
+    display: inline-block;
+    padding-top: 30px;
+    text-align: left;
+    transition:  margin-left 0.5s ease-in-out;
 }
 .div-img{
     width: 420px;
@@ -150,17 +166,6 @@
     margin: 0 auto;
     width: 100%;
     height: 25px;
-}
-.item_procud{
-    position: relative;
-    top: 0;
-    width: 235px;
-    height: 330px;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    margin: 0 10px 22px 10px;
-    padding-left: 15px;
-    padding-right: 15px;
 }
 .flecha-left-galeria{
     display: inline-block;
