--- a/res/assets/css/catalogo_producto/header_catalogo.css
+++ b/res/assets/css/catalogo_producto/header_catalogo.css
@@ -28,7 +28,8 @@ width: 480px;
 */
 .conten_header_catalogo{
 	width: 100%;
-	height: 245px;
+    max-height: 284px;
+    min-height: 272px; 
 	overflow: hidden;
 }
 .conten_header_item{
