--- a/res/assets/css/catalogo_producto/produc_prin_catalogo.css
+++ b/res/assets/css/catalogo_producto/produc_prin_catalogo.css
@@ -1,4 +1,23 @@
-
+.texto_tag {
+    width: 100%;
+    height: 74px;
+}
+.etiquetas_tag {
+    width: 100%;
+    min-height: 200px!important;
+    border: 23px solid whitesmoke;
+    line-height: 1;
+    padding-top: 38px;
+    padding-left: 15px;
+    color: #ff7f27;
+    font-size: 16px;
+}
+.text-tag {
+    padding-top: 42px;
+    font-size: 19px;
+    padding-left: 35px;
+    font-weight: bold;
+}
 a
 {
   color: black;
