--- a/res/assets/css/index_oroPlatino/index_oroPlatino.css
+++ b/res/assets/css/index_oroPlatino/index_oroPlatino.css
@@ -572,7 +572,7 @@ iframe {
 
 .logo_empresa_2 {
     width: 430px;
-    background-color: #fff;
+    /*background-color: #fff;*/
     height: 372px;
     margin-top: 20px;
 }
@@ -589,10 +589,10 @@ iframe {
 }
 
 .con_logo {
-    margin: 0 auto;
-    max-width: 362px;
+    /* margin: 0 auto; */
+    max-width: 288px;
     max-height: 630px;
-    padding: 0 15px;
+    padding: 15px 15px;
 }
 
 .item_redes_sociales {
@@ -616,12 +616,12 @@ iframe {
 }
 
 .informacion-contacto {
-    width: 100%;
-    border: 0;
+    width: 150%;
+    border: 35px;
     background-color: #fff;
     margin-top: 20px;
     margin-bottom: 22px;
-    padding: 30px 20px 20px 20px;
+    padding: 38px 518px 20px 20px;
 }
 
 .img_video {
@@ -719,7 +719,7 @@ iframe {
 
 .logo_nuestra {
     margin: 0 auto;
-    max-width: 385px;
+    max-width: 360px;
     max-height: 131px;
 }
 
@@ -941,5 +941,5 @@ iframe {
     .con_logo {
         position: relative;
         top: 165px;
-        left: 27px;
+        /*left: 27px;*/
     }
