--- a/res/assets/css/social.css
+++ b/res/assets/css/social.css
@@ -1,6 +1,6 @@
 .inline p{
 	display: inline-block;
-    margin: 10px -2px 10px;
+    margin: 10px 0px 10px;
     padding: 0;
 }
 a.share-btn{
@@ -44,6 +44,13 @@ a.share-btn{
 .s_linkedin {
 	background-color: #2ba3e1;
 	border-color: #207aa8;
+	-webkit-box-shadow: inset 0 -2px 0 rgba(0,0,0,.15);
+	box-shadow: inset 0 -2px 0 rgba(0,0,0,.15)
+}
+
+.s_email {
+	background-color: #4c75a3;
+	border-color: #39587b;
 	-webkit-box-shadow: inset 0 -2px 0 rgba(0,0,0,.15);
 	box-shadow: inset 0 -2px 0 rgba(0,0,0,.15)
 }
