Imagenes cuando se comparte están por default en la pestaña Inicio, y Catalogo

--- a/res/assets/css/social.css
+++ b/res/assets/css/social.css
@@ -54,3 +54,9 @@ a.share-btn{
 	-webkit-box-shadow: inset 0 -2px 0 rgba(0,0,0,.15);
 	box-shadow: inset 0 -2px 0 rgba(0,0,0,.15)
 }
+.s_whatsapp {
+	background-color: #08C65B;
+	border-color: #39587b;
+	-webkit-box-shadow: inset 0 -2px 0 rgba(0,0,0,.15);
+	box-shadow: inset 0 -2px 0 rgba(0,0,0,.15)
+}
