--- a/res/assets/css/catalogo_producto/header_catalogo.css
+++ b/res/assets/css/catalogo_producto/header_catalogo.css
@@ -261,7 +261,7 @@ width: 480px;
 		width: 100%;
 		height: 59px;
 	    border-top: 1px solid #e5e5e5;
-	    border-bottom: 5px solid #0694da;	   
+	    border-bottom: 5px solid #337AB7;	   
 	}
 	.list_item{
 		list-style: none;
