--- a/res/assets/css/config_OroPlatino/conf_cata_produc.css
+++ b/res/assets/css/config_OroPlatino/conf_cata_produc.css
@@ -3,6 +3,14 @@
     max-height: 39px;
     max-width: 130px;
 }*/
+.popup-productos
+ {
+    width: 965.818182px;
+    align-self: center;
+    position: relative;
+    padding: 5px;
+    margin-left: -213px;
+}
 .pad-left{
     padding-left: 76px !important;
 }
@@ -29,20 +37,18 @@ a{
     max-width: 51px;
     max-height: 29px;
 }
-.img_preview_producto
-{
-    max-width: 103px;
-    max-height: 58px;
+.img_preview_producto {
+    width: 100%;
+    height: 100%;
 }
-.banner_preview
-{
-  max-height: 40px;
-  max-width: 127px;
+.banner_preview {
+    height: 15px;
+    width: 31px;
 }
 .img_preview
-{
-  height: 40px;
-  max-width: 127px;
+ {
+    height: 40px;
+    max-width: 200px;
 }
 .logo
 {
@@ -416,8 +422,13 @@ a{
     height: auto;
     border: 1px solid #ccc;
 }
-.conten-mas-videos{
-    padding: 0;
+.conten-mas-videos {
+    padding-top: 10px;
+    width: 244px!important;
+}
+#div_destacados
+{
+    padding-bottom: 20px;
 }
 .conten-title > i.icostyle-config, .conten-title > h3.text-title-config{
 	display: inline-block;
@@ -663,10 +674,12 @@ a{
     font-size: 16px;
     color: #111;
 }
-.name-file{
+.name-file {
     display: inline-block;
     margin-left: 8px;
     margin-right: 8px;
+    height: 14px;
+    width: 135px;
 }
 .nomArchivo-catalo{
     font-size: 16px;
@@ -706,8 +719,11 @@ a{
 .content-numero{
     display: inline-block;
 }
-.padding-bottom{
-    padding-bottom: 40px;
+.padding-bottom {
+    padding-bottom: 20px;
+    padding-top: 20px;
+    border: 1px solid #e5e5e5;
+    height: 161px;
 }
 .padi2{
     padding-left: 0;
@@ -833,25 +849,26 @@ a{
     font-size: 15px !important;
     color: red;
 }
-.txt_nomproducto2{
-    font-size: 17px;
+.txt_nomproducto2 {
+    font-size: 15px;
     margin-bottom: 3px;
     color: #111;
     line-height: 1;
     overflow: hidden;
     text-overflow: ellipsis;
-    width: 370px;
+    width: 271px;
     height: 35px;
 }
-.txt_nomproducto, .txt_precio, .txt_pedido{
-    font-size: 17px;
-    margin-bottom: 3px;
+.txt_nomproducto, .txt_precio, .txt_pedido {
+    font-size: 14px;
+    margin-bottom: 0px;
     line-height: 1;
     color: #111;
 }
-.txt_desc{
-    font-size: 15px;
+.txt_desc {
+    font-size: 13px;
     margin-bottom: 3px;
+    width: 270px;
     line-height: 1;
     color: #ccc;
 }
@@ -1055,6 +1072,11 @@ a{
     margin-bottom: 0;
     line-height: 0;
 }
+.imagen-prin {
+    padding-right: 5px;
+    width: 125px;
+    height: 103px;
+}
 
 @media (max-width: 1280px) {
     .content-numero{
@@ -1066,9 +1088,11 @@ a{
     .img-nom-remove{
         margin-left: -3px;
     }
-    .imagen-prin{
-        padding-right: 20px;
-    }
+    .imagen-prin {
+    padding-right: 5px;
+    width: 125px;
+    height: 103px;
+}
     .text-pdf{
         margin-left: 0;
     }
