--- a/res/assets/css/contacto/contacto.css
+++ b/res/assets/css/contacto/contacto.css
@@ -1,3 +1,24 @@
+.texto_tag {
+    width: 100%;
+    height: 74px;
+}
+.etiquetas_tag {
+    width: 100%;
+    min-height: 200px!important;
+    border: 23px solid whitesmoke;
+    line-height: 1;
+    padding-top: 38px;
+    padding-left: 15px;
+    color: #ff7f27;
+    font-size: 16px;
+}
+.text-tag {
+    padding-top: 42px;
+    font-size: 19px;
+    padding-left: 35px;
+    font-weight: bold;
+}
+
 .contenido_contactenos{
 	width: 100%;
     height: 69px;
@@ -72,16 +93,6 @@
 .texto_tag{
 	width: 100%;
 	height: 108px;
-}
-.etiquetas_tag{
-    width: 100%;
-    height: 153px;
-    border: 23px solid whitesmoke;
-    line-height: 1;
-    padding-top: 38px;
-    padding-left: 15px;
-    color: #ff7f27;
-    font-size: 16px;
 }
 .text-tag{
     padding-top: 81px;
