--- a/res/assets/css/nosotros/nosotros.css
+++ b/res/assets/css/nosotros/nosotros.css
@@ -1,3 +1,23 @@
+.texto_tag {
+    width: 100%;
+    height: 74px;
+}
+.etiquetas_tag {
+    width: 100%;
+    min-height: 200px!important;
+    border: 23px solid whitesmoke;
+    line-height: 1;
+    padding-top: 38px;
+    padding-left: 15px;
+    color: #ff7f27;
+    font-size: 16px;
+}
+.text-tag {
+    padding-top: 42px;
+    font-size: 19px;
+    padding-left: 35px;
+    font-weight: bold;
+}
 .nuestra_empresa{
     width: 100%;
     height: 83px;
@@ -432,7 +452,7 @@ li #icmem{
 }
 .texto_tag{
     margin-bottom: 0;
-    color: orange;
+   /* color: orange;*/
     font-size: 17px;
     line-height: 1;
 }
