Movidos los botones del header al content

--- a/res/assets/css/catalogo_producto/header_catalogo.css
+++ b/res/assets/css/catalogo_producto/header_catalogo.css
@@ -1,6 +1,13 @@
 #share-header p .sh_btn {
     padding: 8px;
 }
+.share-buttons{
+    position: relative;
+    left: -11px;
+}
+.label-share{
+	margin-top: 13px;
+}
 .share-well{
     padding: 4px !important;
 }
